Mobx, Errors, Logger, Backgrounds

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <link rel="icon" type="image/svg+xml" href="/vite.svg"/>
+    <link rel="icon" type="image/svg+xml" href="/react.svg"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>CaaS Platform</title>
 </head>
@@ -10,20 +10,8 @@
 <div id="root"></div>
 <script type="module">
     import {Buffer} from 'buffer'
-    import process from 'process'
-
     window.Buffer = Buffer
-    window.process2 = process
-    // Polyfill for process.nextTick required by Web3Auth dependencies
-    if (typeof window.process2 === 'undefined') {
-        window.process2 = {env: {}};
-    }
-    if (typeof window.process2.nextTick !== 'function') {
-        window.process2.nextTick = function (callback, ...args) {
-            queueMicrotask(() => callback(...args));
-        };
-    }
 </script>
-<script type="module" src="/src/app/index.tsx"></script>
+<script type="module" src="src/app/index.tsx"></script>
 </body>
 </html>
